new proj/src/objects/Product_Book_Integration_Config__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <customSettingsVisibility>Protected</customSettingsVisibility>
    <description>This custom setting controls the details for source system, price book entry id used for the Informatica Bulk Product Book Update Integration</description>
    <fields>
        <fullName>GE_HQ_Legacy_ID_Prefix__c</fullName>
        <label>Legacy ID Prefix</label>
        <length>10</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_HQ_Price_Book_ID__c</fullName>
        <label>Price Book ID</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_HQ_Source_System__c</fullName>
        <externalId>true</externalId>
        <label>Source System</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_HQ_is_Standard__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Standard Price Book</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Tier_1_Business__c</fullName>
        <label>Tier 1 Business</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Product Book Integration Config</label>
</CustomObject>